# fotoscan

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE-REVIEWS.md  DOCKER.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  todo.md
.github/workflows/: docker-publish.yml
app/: config.py  database.py  main.py  schemas.py
app/routes/: albums.py  backside.py  backup.py  dashboard.py  duplicates.py  export.py  faces.py  faces_ai.py  geo.py  pairing.py  persons.py  photos.py  places.py  scan.py  tags.py  timeline.py
app/services/: adjust.py  context.py  dates.py  dupes.py  exporter.py  faces_ai.py  filtering.py  pdf_album.py  scanner.py
app/static/css/: style.css
app/static/js/: adjust.js  backside.js  faces.js  map.js  map_overview.js  pairing.js  photo.js  tokenfield.js  utils.js
app/templates/: _cards.html  _filterbar.html  album_detail.html  album_layout.html  album_pdf.html  albums.html  base.html  dashboard.html  duplicates.html  faces_clusters.html  faces_review.html  faces_review_photo.html  index.html  map.html  person_detail.html  persons.html  persons_duplicates.html  persons_tree.html  photo.html  place_detail.html  places.html  tag_detail.html  tags.html  timeline.html
