[project]
name = "fotoscan"
version = "0.1.0"
description = "Metadataverktyg for gamla foton och negativ"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "pillow>=11.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0",
    "weasyprint>=69.0",
]

[tool.uv]
package = false
